// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stat Items Component disable charts it renders the default widget 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Memo()
    description="HOSTS"
    fields={
      Array [
        Object {
          "color": "#3185FC",
          "icon": "cross",
          "key": "hosts",
          "value": null,
        },
      ]
    }
    from={1560578400000}
    id="statItems"
    index={0}
    key="mock-keys"
    to={1560837600000}
  >
    <Styled(EuiFlexItem)>
      <EuiFlexItem
        className="sc-ifAKCX cFdETZ"
      >
        <div
          className="euiFlexItem sc-ifAKCX cFdETZ"
        >
          <EuiPanel
            grow={true}
            hasShadow={false}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            paddingSize="m"
          >
            <div
              className="euiPanel euiPanel--paddingMedium"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <EuiFlexGroup
                gutterSize="none"
              >
                <div
                  className="euiFlexGroup euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <EuiFlexItem>
                    <div
                      className="euiFlexItem"
                    >
                      <EuiTitle
                        size="xxxs"
                      >
                        <h6
                          className="euiTitle euiTitle--xxxsmall"
                        >
                          HOSTS
                        </h6>
                      </EuiTitle>
                    </div>
                  </EuiFlexItem>
                  <EuiFlexItem
                    grow={false}
                  >
                    <div
                      className="euiFlexItem euiFlexItem--flexGrowZero"
                    >
                      <Connect(pure(Component))
                        inspectIndex={0}
                        queryId="statItems"
                        show={false}
                        title="KPI HOSTS"
                      >
                        <pure(Component)
                          id=""
                          inspect={null}
                          inspectIndex={0}
                          isInspected={false}
                          loading={false}
                          queryId="statItems"
                          refetch={null}
                          selectedInspectIndex={0}
                          setIsInspected={[Function]}
                          show={false}
                          title="KPI HOSTS"
                        >
                          <Component
                            id=""
                            inspect={null}
                            inspectIndex={0}
                            isInspected={false}
                            loading={false}
                            queryId="statItems"
                            refetch={null}
                            selectedInspectIndex={0}
                            setIsInspected={[Function]}
                            show={false}
                            title="KPI HOSTS"
                          >
                            <styled.div
                              showInspect={false}
                            >
                              <div
                                className="sc-bxivhb fGGQew"
                              >
                                <EuiButtonIcon
                                  aria-label="Inspect"
                                  className=""
                                  color="primary"
                                  data-test-subj="inspect-icon-button"
                                  iconSize="m"
                                  iconType="inspect"
                                  onClick={[Function]}
                                  title="Inspect"
                                  type="button"
                                >
                                  <button
                                    aria-label="Inspect"
                                    className="euiButtonIcon euiButtonIcon--primary"
                                    data-test-subj="inspect-icon-button"
                                    onClick={[Function]}
                                    title="Inspect"
                                    type="button"
                                  >
                                    <EuiIcon
                                      aria-hidden="true"
                                      className="euiButtonIcon__icon"
                                      size="m"
                                      type="inspect"
                                    >
                                      <EuiIconEmpty
                                        aria-hidden="true"
                                        className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
                                        focusable="false"
                                        style={null}
                                      >
                                        <svg
                                          aria-hidden="true"
                                          className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
                                          focusable="false"
                                          height={16}
                                          style={null}
                                          viewBox="0 0 16 16"
                                          width={16}
                                          xmlns="http://www.w3.org/2000/svg"
                                        />
                                      </EuiIconEmpty>
                                    </EuiIcon>
                                  </button>
                                </EuiButtonIcon>
                                <ModalInspectQuery
                                  closeModal={[Function]}
                                  data-test-subj="inspect-modal"
                                  isShowing={false}
                                  request={null}
                                  response={null}
                                  title="KPI HOSTS"
                                />
                              </div>
                            </styled.div>
                          </Component>
                        </pure(Component)>
                      </Connect(pure(Component))>
                    </div>
                  </EuiFlexItem>
                </div>
              </EuiFlexGroup>
              <EuiFlexGroup>
                <div
                  className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <Styled(EuiFlexItem)
                    key="stat-items-field-hosts"
                  >
                    <EuiFlexItem
                      className="sc-ifAKCX cFdETZ"
                    >
                      <div
                        className="euiFlexItem sc-ifAKCX cFdETZ"
                      >
                        <EuiFlexGroup
                          alignItems="center"
                          gutterSize="m"
                          responsive={false}
                        >
                          <div
                            className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                          >
                            <Styled(EuiFlexItem)>
                              <EuiFlexItem
                                className="sc-ifAKCX cFdETZ"
                              >
                                <div
                                  className="euiFlexItem sc-ifAKCX cFdETZ"
                                >
                                  <Styled(EuiTitle)>
                                    <EuiTitle
                                      className="sc-EHOje koezUx"
                                    >
                                      <p
                                        className="euiTitle euiTitle--medium sc-EHOje koezUx"
                                        data-test-subj="stat-title"
                                      >
                                        --
                                         
                                      </p>
                                    </EuiTitle>
                                  </Styled(EuiTitle)>
                                </div>
                              </EuiFlexItem>
                            </Styled(EuiFlexItem)>
                          </div>
                        </EuiFlexGroup>
                      </div>
                    </EuiFlexItem>
                  </Styled(EuiFlexItem)>
                </div>
              </EuiFlexGroup>
              <EuiFlexGroup>
                <div
                  className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                />
              </EuiFlexGroup>
            </div>
          </EuiPanel>
        </div>
      </EuiFlexItem>
    </Styled(EuiFlexItem)>
  </Memo()>
</Provider>
`;

exports[`Stat Items Component disable charts it renders the default widget 2`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Memo()
    areaChart={Array []}
    barChart={Array []}
    description="HOSTS"
    fields={
      Array [
        Object {
          "color": "#3185FC",
          "icon": "cross",
          "key": "hosts",
          "value": null,
        },
      ]
    }
    from={1560578400000}
    id="statItems"
    index={0}
    key="mock-keys"
    to={1560837600000}
  >
    <Styled(EuiFlexItem)>
      <EuiFlexItem
        className="sc-ifAKCX cFdETZ"
      >
        <div
          className="euiFlexItem sc-ifAKCX cFdETZ"
        >
          <EuiPanel
            grow={true}
            hasShadow={false}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            paddingSize="m"
          >
            <div
              className="euiPanel euiPanel--paddingMedium"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <EuiFlexGroup
                gutterSize="none"
              >
                <div
                  className="euiFlexGroup euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <EuiFlexItem>
                    <div
                      className="euiFlexItem"
                    >
                      <EuiTitle
                        size="xxxs"
                      >
                        <h6
                          className="euiTitle euiTitle--xxxsmall"
                        >
                          HOSTS
                        </h6>
                      </EuiTitle>
                    </div>
                  </EuiFlexItem>
                  <EuiFlexItem
                    grow={false}
                  >
                    <div
                      className="euiFlexItem euiFlexItem--flexGrowZero"
                    >
                      <Connect(pure(Component))
                        inspectIndex={0}
                        queryId="statItems"
                        show={false}
                        title="KPI HOSTS"
                      >
                        <pure(Component)
                          id=""
                          inspect={null}
                          inspectIndex={0}
                          isInspected={false}
                          loading={false}
                          queryId="statItems"
                          refetch={null}
                          selectedInspectIndex={0}
                          setIsInspected={[Function]}
                          show={false}
                          title="KPI HOSTS"
                        >
                          <Component
                            id=""
                            inspect={null}
                            inspectIndex={0}
                            isInspected={false}
                            loading={false}
                            queryId="statItems"
                            refetch={null}
                            selectedInspectIndex={0}
                            setIsInspected={[Function]}
                            show={false}
                            title="KPI HOSTS"
                          >
                            <styled.div
                              showInspect={false}
                            >
                              <div
                                className="sc-bxivhb fGGQew"
                              >
                                <EuiButtonIcon
                                  aria-label="Inspect"
                                  className=""
                                  color="primary"
                                  data-test-subj="inspect-icon-button"
                                  iconSize="m"
                                  iconType="inspect"
                                  onClick={[Function]}
                                  title="Inspect"
                                  type="button"
                                >
                                  <button
                                    aria-label="Inspect"
                                    className="euiButtonIcon euiButtonIcon--primary"
                                    data-test-subj="inspect-icon-button"
                                    onClick={[Function]}
                                    title="Inspect"
                                    type="button"
                                  >
                                    <EuiIcon
                                      aria-hidden="true"
                                      className="euiButtonIcon__icon"
                                      size="m"
                                      type="inspect"
                                    >
                                      <EuiIconEmpty
                                        aria-hidden="true"
                                        className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
                                        focusable="false"
                                        style={null}
                                      >
                                        <svg
                                          aria-hidden="true"
                                          className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
                                          focusable="false"
                                          height={16}
                                          style={null}
                                          viewBox="0 0 16 16"
                                          width={16}
                                          xmlns="http://www.w3.org/2000/svg"
                                        />
                                      </EuiIconEmpty>
                                    </EuiIcon>
                                  </button>
                                </EuiButtonIcon>
                                <ModalInspectQuery
                                  closeModal={[Function]}
                                  data-test-subj="inspect-modal"
                                  isShowing={false}
                                  request={null}
                                  response={null}
                                  title="KPI HOSTS"
                                />
                              </div>
                            </styled.div>
                          </Component>
                        </pure(Component)>
                      </Connect(pure(Component))>
                    </div>
                  </EuiFlexItem>
                </div>
              </EuiFlexGroup>
              <EuiFlexGroup>
                <div
                  className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <Styled(EuiFlexItem)
                    key="stat-items-field-hosts"
                  >
                    <EuiFlexItem
                      className="sc-ifAKCX cFdETZ"
                    >
                      <div
                        className="euiFlexItem sc-ifAKCX cFdETZ"
                      >
                        <EuiFlexGroup
                          alignItems="center"
                          gutterSize="m"
                          responsive={false}
                        >
                          <div
                            className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                          >
                            0
                            <Styled(EuiFlexItem)>
                              <EuiFlexItem
                                className="sc-ifAKCX cFdETZ"
                              >
                                <div
                                  className="euiFlexItem sc-ifAKCX cFdETZ"
                                >
                                  <Styled(EuiTitle)>
                                    <EuiTitle
                                      className="sc-EHOje koezUx"
                                    >
                                      <p
                                        className="euiTitle euiTitle--medium sc-EHOje koezUx"
                                        data-test-subj="stat-title"
                                      >
                                        --
                                         
                                      </p>
                                    </EuiTitle>
                                  </Styled(EuiTitle)>
                                </div>
                              </EuiFlexItem>
                            </Styled(EuiFlexItem)>
                          </div>
                        </EuiFlexGroup>
                      </div>
                    </EuiFlexItem>
                  </Styled(EuiFlexItem)>
                </div>
              </EuiFlexGroup>
              <EuiFlexGroup>
                <div
                  className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                />
              </EuiFlexGroup>
            </div>
          </EuiPanel>
        </div>
      </EuiFlexItem>
    </Styled(EuiFlexItem)>
  </Memo()>
</Provider>
`;

exports[`Stat Items Component rendering kpis with charts it renders the default widget 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Memo()
    areaChart={
      Array [
        Object {
          "color": "#DB1374",
          "key": "uniqueSourceIpsHistogram",
          "value": Array [
            Object {
              "x": 1556888400000,
              "y": 565975,
            },
            Object {
              "x": 1556931600000,
              "y": 1084366,
            },
            Object {
              "x": 1556974800000,
              "y": 12280,
            },
          ],
        },
        Object {
          "color": "#490092",
          "key": "uniqueDestinationIpsHistogram",
          "value": Array [
            Object {
              "x": 1556888400000,
              "y": 565975,
            },
            Object {
              "x": 1556931600000,
              "y": 1084366,
            },
            Object {
              "x": 1556974800000,
              "y": 12280,
            },
          ],
        },
      ]
    }
    barChart={
      Array [
        Object {
          "color": "#DB1374",
          "key": "uniqueSourceIps",
          "value": Array [
            Object {
              "x": "uniqueSourceIps",
              "y": "1714",
            },
          ],
        },
        Object {
          "color": "#490092",
          "key": "uniqueDestinationIps",
          "value": Array [
            Object {
              "x": "uniqueDestinationIps",
              "y": 2354,
            },
          ],
        },
      ]
    }
    description="UNIQUE_PRIVATE_IPS"
    enableAreaChart={true}
    enableBarChart={true}
    fields={
      Array [
        Object {
          "color": "#DB1374",
          "description": "Source",
          "icon": "cross",
          "key": "uniqueSourceIps",
          "value": 1714,
        },
        Object {
          "color": "#490092",
          "description": "Dest.",
          "icon": "cross",
          "key": "uniqueDestinationIps",
          "value": 2359,
        },
      ]
    }
    from={1560578400000}
    id="statItems"
    index={0}
    key="mock-keys"
    to={1560837600000}
  >
    <Styled(EuiFlexItem)>
      <EuiFlexItem
        className="sc-ifAKCX cFdETZ"
      >
        <div
          className="euiFlexItem sc-ifAKCX cFdETZ"
        >
          <EuiPanel
            grow={true}
            hasShadow={false}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            paddingSize="m"
          >
            <div
              className="euiPanel euiPanel--paddingMedium"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <EuiFlexGroup
                gutterSize="none"
              >
                <div
                  className="euiFlexGroup euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <EuiFlexItem>
                    <div
                      className="euiFlexItem"
                    >
                      <EuiTitle
                        size="xxxs"
                      >
                        <h6
                          className="euiTitle euiTitle--xxxsmall"
                        >
                          UNIQUE_PRIVATE_IPS
                        </h6>
                      </EuiTitle>
                    </div>
                  </EuiFlexItem>
                  <EuiFlexItem
                    grow={false}
                  >
                    <div
                      className="euiFlexItem euiFlexItem--flexGrowZero"
                    >
                      <Connect(pure(Component))
                        inspectIndex={0}
                        queryId="statItems"
                        show={false}
                        title="KPI UNIQUE_PRIVATE_IPS"
                      >
                        <pure(Component)
                          id=""
                          inspect={null}
                          inspectIndex={0}
                          isInspected={false}
                          loading={false}
                          queryId="statItems"
                          refetch={null}
                          selectedInspectIndex={0}
                          setIsInspected={[Function]}
                          show={false}
                          title="KPI UNIQUE_PRIVATE_IPS"
                        >
                          <Component
                            id=""
                            inspect={null}
                            inspectIndex={0}
                            isInspected={false}
                            loading={false}
                            queryId="statItems"
                            refetch={null}
                            selectedInspectIndex={0}
                            setIsInspected={[Function]}
                            show={false}
                            title="KPI UNIQUE_PRIVATE_IPS"
                          >
                            <styled.div
                              showInspect={false}
                            >
                              <div
                                className="sc-bxivhb fGGQew"
                              >
                                <EuiButtonIcon
                                  aria-label="Inspect"
                                  className=""
                                  color="primary"
                                  data-test-subj="inspect-icon-button"
                                  iconSize="m"
                                  iconType="inspect"
                                  onClick={[Function]}
                                  title="Inspect"
                                  type="button"
                                >
                                  <button
                                    aria-label="Inspect"
                                    className="euiButtonIcon euiButtonIcon--primary"
                                    data-test-subj="inspect-icon-button"
                                    onClick={[Function]}
                                    title="Inspect"
                                    type="button"
                                  >
                                    <EuiIcon
                                      aria-hidden="true"
                                      className="euiButtonIcon__icon"
                                      size="m"
                                      type="inspect"
                                    >
                                      <EuiIconEmpty
                                        aria-hidden="true"
                                        className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
                                        focusable="false"
                                        style={null}
                                      >
                                        <svg
                                          aria-hidden="true"
                                          className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
                                          focusable="false"
                                          height={16}
                                          style={null}
                                          viewBox="0 0 16 16"
                                          width={16}
                                          xmlns="http://www.w3.org/2000/svg"
                                        />
                                      </EuiIconEmpty>
                                    </EuiIcon>
                                  </button>
                                </EuiButtonIcon>
                                <ModalInspectQuery
                                  closeModal={[Function]}
                                  data-test-subj="inspect-modal"
                                  isShowing={false}
                                  request={null}
                                  response={null}
                                  title="KPI UNIQUE_PRIVATE_IPS"
                                />
                              </div>
                            </styled.div>
                          </Component>
                        </pure(Component)>
                      </Connect(pure(Component))>
                    </div>
                  </EuiFlexItem>
                </div>
              </EuiFlexGroup>
              <EuiFlexGroup>
                <div
                  className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <Styled(EuiFlexItem)
                    key="stat-items-field-uniqueSourceIps"
                  >
                    <EuiFlexItem
                      className="sc-ifAKCX cFdETZ"
                    >
                      <div
                        className="euiFlexItem sc-ifAKCX cFdETZ"
                      >
                        <EuiFlexGroup
                          alignItems="center"
                          gutterSize="m"
                          responsive={false}
                        >
                          <div
                            className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                          >
                            <Styled(EuiFlexItem)
                              grow={false}
                            >
                              <EuiFlexItem
                                className="sc-ifAKCX cFdETZ"
                                grow={false}
                              >
                                <div
                                  className="euiFlexItem euiFlexItem--flexGrowZero sc-ifAKCX cFdETZ"
                                >
                                  <EuiIcon
                                    color="#DB1374"
                                    data-test-subj="stat-icon"
                                    size="l"
                                    type="cross"
                                  >
                                    <EuiIconEmpty
                                      className="euiIcon euiIcon--large euiIcon-isLoading"
                                      data-test-subj="stat-icon"
                                      focusable="false"
                                      style={
                                        Object {
                                          "fill": "#DB1374",
                                        }
                                      }
                                    >
                                      <svg
                                        className="euiIcon euiIcon--large euiIcon-isLoading"
                                        data-test-subj="stat-icon"
                                        focusable="false"
                                        height={16}
                                        style={
                                          Object {
                                            "fill": "#DB1374",
                                          }
                                        }
                                        viewBox="0 0 16 16"
                                        width={16}
                                        xmlns="http://www.w3.org/2000/svg"
                                      />
                                    </EuiIconEmpty>
                                  </EuiIcon>
                                </div>
                              </EuiFlexItem>
                            </Styled(EuiFlexItem)>
                            <Styled(EuiFlexItem)>
                              <EuiFlexItem
                                className="sc-ifAKCX cFdETZ"
                              >
                                <div
                                  className="euiFlexItem sc-ifAKCX cFdETZ"
                                >
                                  <Styled(EuiTitle)>
                                    <EuiTitle
                                      className="sc-EHOje koezUx"
                                    >
                                      <p
                                        className="euiTitle euiTitle--medium sc-EHOje koezUx"
                                        data-test-subj="stat-title"
                                      >
                                        1,714
                                         
                                        Source
                                      </p>
                                    </EuiTitle>
                                  </Styled(EuiTitle)>
                                </div>
                              </EuiFlexItem>
                            </Styled(EuiFlexItem)>
                          </div>
                        </EuiFlexGroup>
                      </div>
                    </EuiFlexItem>
                  </Styled(EuiFlexItem)>
                  <Styled(EuiFlexItem)
                    key="stat-items-field-uniqueDestinationIps"
                  >
                    <EuiFlexItem
                      className="sc-ifAKCX cFdETZ"
                    >
                      <div
                        className="euiFlexItem sc-ifAKCX cFdETZ"
                      >
                        <EuiFlexGroup
                          alignItems="center"
                          gutterSize="m"
                          responsive={false}
                        >
                          <div
                            className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                          >
                            <Styled(EuiFlexItem)
                              grow={false}
                            >
                              <EuiFlexItem
                                className="sc-ifAKCX cFdETZ"
                                grow={false}
                              >
                                <div
                                  className="euiFlexItem euiFlexItem--flexGrowZero sc-ifAKCX cFdETZ"
                                >
                                  <EuiIcon
                                    color="#490092"
                                    data-test-subj="stat-icon"
                                    size="l"
                                    type="cross"
                                  >
                                    <EuiIconEmpty
                                      className="euiIcon euiIcon--large euiIcon-isLoading"
                                      data-test-subj="stat-icon"
                                      focusable="false"
                                      style={
                                        Object {
                                          "fill": "#490092",
                                        }
                                      }
                                    >
                                      <svg
                                        className="euiIcon euiIcon--large euiIcon-isLoading"
                                        data-test-subj="stat-icon"
                                        focusable="false"
                                        height={16}
                                        style={
                                          Object {
                                            "fill": "#490092",
                                          }
                                        }
                                        viewBox="0 0 16 16"
                                        width={16}
                                        xmlns="http://www.w3.org/2000/svg"
                                      />
                                    </EuiIconEmpty>
                                  </EuiIcon>
                                </div>
                              </EuiFlexItem>
                            </Styled(EuiFlexItem)>
                            <Styled(EuiFlexItem)>
                              <EuiFlexItem
                                className="sc-ifAKCX cFdETZ"
                              >
                                <div
                                  className="euiFlexItem sc-ifAKCX cFdETZ"
                                >
                                  <Styled(EuiTitle)>
                                    <EuiTitle
                                      className="sc-EHOje koezUx"
                                    >
                                      <p
                                        className="euiTitle euiTitle--medium sc-EHOje koezUx"
                                        data-test-subj="stat-title"
                                      >
                                        2,359
                                         
                                        Dest.
                                      </p>
                                    </EuiTitle>
                                  </Styled(EuiTitle)>
                                </div>
                              </EuiFlexItem>
                            </Styled(EuiFlexItem)>
                          </div>
                        </EuiFlexGroup>
                      </div>
                    </EuiFlexItem>
                  </Styled(EuiFlexItem)>
                </div>
              </EuiFlexGroup>
              <EuiHorizontalRule>
                <hr
                  className="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginLarge"
                />
              </EuiHorizontalRule>
              <EuiFlexGroup>
                <div
                  className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <Styled(EuiFlexItem)>
                    <EuiFlexItem
                      className="sc-ifAKCX cFdETZ"
                    >
                      <div
                        className="euiFlexItem sc-ifAKCX cFdETZ"
                      >
                        <Memo(mockConstructor)
                          barChart={
                            Array [
                              Object {
                                "color": "#DB1374",
                                "key": "uniqueSourceIps",
                                "value": Array [
                                  Object {
                                    "x": "uniqueSourceIps",
                                    "y": "1714",
                                  },
                                ],
                              },
                              Object {
                                "color": "#490092",
                                "key": "uniqueDestinationIps",
                                "value": Array [
                                  Object {
                                    "x": "uniqueDestinationIps",
                                    "y": 2354,
                                  },
                                ],
                              },
                            ]
                          }
                          configs={
                            Object {
                              "axis": Object {
                                "xTickFormatter": [Function],
                              },
                              "series": Object {
                                "xScaleType": "ordinal",
                                "yScaleType": "linear",
                              },
                            }
                          }
                        />
                      </div>
                    </EuiFlexItem>
                  </Styled(EuiFlexItem)>
                  <Styled(EuiFlexItem)>
                    <EuiFlexItem
                      className="sc-ifAKCX cFdETZ"
                    >
                      <div
                        className="euiFlexItem sc-ifAKCX cFdETZ"
                      >
                        <Memo(mockConstructor)
                          areaChart={
                            Array [
                              Object {
                                "color": "#DB1374",
                                "key": "uniqueSourceIpsHistogram",
                                "value": Array [
                                  Object {
                                    "x": 1556888400000,
                                    "y": 565975,
                                  },
                                  Object {
                                    "x": 1556931600000,
                                    "y": 1084366,
                                  },
                                  Object {
                                    "x": 1556974800000,
                                    "y": 12280,
                                  },
                                ],
                              },
                              Object {
                                "color": "#490092",
                                "key": "uniqueDestinationIpsHistogram",
                                "value": Array [
                                  Object {
                                    "x": 1556888400000,
                                    "y": 565975,
                                  },
                                  Object {
                                    "x": 1556931600000,
                                    "y": 1084366,
                                  },
                                  Object {
                                    "x": 1556974800000,
                                    "y": 12280,
                                  },
                                ],
                              },
                            ]
                          }
                          configs={
                            Object {
                              "axis": Object {
                                "xTickFormatter": [Function],
                                "yTickFormatter": [Function],
                              },
                              "series": Object {
                                "xScaleType": "time",
                                "yScaleType": "linear",
                              },
                            }
                          }
                        />
                      </div>
                    </EuiFlexItem>
                  </Styled(EuiFlexItem)>
                </div>
              </EuiFlexGroup>
            </div>
          </EuiPanel>
        </div>
      </EuiFlexItem>
    </Styled(EuiFlexItem)>
  </Memo()>
</Provider>
`;
